k8s-gitops/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager-app
  namespace: applications
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-manager
  template:
    metadata:
      labels:
        app: task-manager
    spec:
      containers:
      - name: web-app
        image: your_dockerhub_username/task-manager-enterprise:1
        ports:
        - containerPort: 5000
