k8s-gitops/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-manager-service
  namespace: applications
spec:
  selector:
    app: task-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6080
